--- a/tekton/base/buildah-pipeline.yaml
+++ b/tekton/base/buildah-pipeline.yaml
@@ -38,3 +38,22 @@ spec:
       workspaces:
         - name: source
           workspace: pipeline-shared-data
+    - name: create-envorinment-config
+      runAfter:
+        - build-and-push-image
+      taskRef:
+        name: kustomize
+      params:
+        - name: app-name
+          value: "$(params.app-name)"
+        - name: app-namespace
+          value: "$(context.pipelineRun.namespace)"
+        - name: source-repo
+          value: "$(params.source-repo)"
+        - name: commit
+          value: "$(tasks.clone-repository.results.commit)"
+        - name: image-repo
+          value: "$(params.image-repo)"
+      workspaces:
+        - name: source
+          workspace: pipeline-shared-data
